frontend/src/pages/Subpage/Subpage.css
.subpage {
    @apply h-screen flex-grow flex flex-col whitespace-nowrap;
}

.subpage-header {
    @apply px-6 lg:px-16;
}

.name-wrapper {
    @apply flex justify-center lg:justify-start items-center pb-2.5 pt-4 lg:pt-10 gap-2.5;
}

.name-wrapper__name {
    @apply text-notion text-base lg:text-2xl font-bold;
}

.subpage-header__description {
    @apply text-notion text-sm font-bold text-opacity-70 hidden lg:inline;
}

.subpage__separator {
    @apply bg-gray-400 h-px w-full hidden lg:block;
}

.subpage__tasks {
    @apply px-6 lg:px-16 flex-grow overflow-x-scroll overflow-y-scroll;
    @apply lg:overflow-y-hidden;
}

